# HelixHR

./: $null  .env.example  .gitignore  Dockerfile  README.md  SPEC.md  alembic.ini  config.yaml  diagnose.py  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial.py
app/: config.py  main.py
app/api/: deps.py
app/api/v1/: auth.py  departments.py  employees.py  rag.py  roles.py  router.py  salaries.py
app/core/: config.py  exceptions.py  pagination.py  security.py
app/data/chroma_db/: chroma.sqlite3
app/db/: session.py
app/models/: __init__.py  department.py  employee.py  role.py  salary.py  user.py
app/rag/: document_loader.py  embeddings.py  rebuild_index.py  retriever.py  vectorstore.py
app/repositories/: __init__.py  base.py  department_repo.py  employee_repo.py  role_repo.py  salary_repo.py  user_repo.py
app/schemas/: __init__.py  base.py  department.py  employee.py  rag.py  role.py  salary.py  user.py
app/services/: __init__.py  auth_service.py  department_service.py  employee_service.py  rag_service.py  role_service.py  salary_service.py
app/utils/: logger.py
data/chroma_db/: chroma.sqlite3
scripts/: init_db.py  rebuild_rag.py
tests/: conftest.py  test_auth.py  test_employees.py  test_rag.py
